--- a/asssets/css/board.css
+++ b/asssets/css/board.css
@@ -1,620 +1,610 @@
 @font-face {
-    font-family: Inter;
-    src: url(./asssets/fonts/Inter-Regular.ttf);
+  font-family: Inter;
+  src: url(./asssets/fonts/Inter-Regular.ttf);
 }
 
 * {
-    box-sizing: unset !important;
+  box-sizing: unset !important;
 }
 
 html {
-    background-color: #F5F5F5;
-    ;
+  background-color: #f5f5f5;
 }
 
 body {
-    font-family: 'Inter';
-    font-style: normal;
-    margin: 0;
-    scroll-behavior: smooth;
+  font-family: "Inter";
+  font-style: normal;
+  margin: 0;
+  scroll-behavior: smooth;
 }
 
 .join-color {
-    background: #2A3647;
+  background: #2a3647;
 }
 
 .orange {
-    background: #FF7A00;
+  background: #ff7a00;
 }
 
 .purple {
-    background: #9327FF;
+  background: #9327ff;
 }
 
 .light-blue {
-    background: #29ABE2;
+  background: #29abe2;
 }
 
 .pink {
-    background: #FC71FF;
+  background: #fc71ff;
 }
 
 .blue {
-    background: #0038FF;
+  background: #0038ff;
 }
 
 .green {
-    background: #02CF2F;
+  background: #02cf2f;
 }
 
 .light-green {
-    background: #1FD7C1;
+  background: #1fd7c1;
 }
 
 .red {
-    background: #AF1616;
+  background: #af1616;
 }
 
 .dark-blue {
-    background: #2A3647;
+  background: #2a3647;
 }
 
 .brown {
-    background: brown;
+  background: brown;
 }
 
 .light-orange {
-    background: orange;
+  background: orange;
 }
 
 .main-div {
-    background-color: #F5F5F5;
-    height: 91vh;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    overflow-y: scroll;
+  background-color: #f5f5f5;
+  height: calc(100vh - 165px);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow-y: scroll;
 }
 
 .head-span {
-    font-weight: 400;
-    font-size: 16px;
-    color: #000000;
-    margin-top: 114px;
-    margin-left: 33px;
+  font-weight: 400;
+  font-size: 16px;
+  color: #000000;
+  margin-top: 114px;
+  margin-left: 33px;
 }
 
 .title {
-    margin-left: 33px;
-    margin-top: 19px;
-    font-size: 47px;
-    font-weight: 700;
-    margin-bottom: 30px;
+  margin-left: 33px;
+  margin-top: 19px;
+  font-size: 47px;
+  font-weight: 700;
+  margin-bottom: 30px;
 }
 
 .title-section {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-right: 29px;
-    flex-shrink: 1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-right: 29px;
+  flex-shrink: 1;
 }
 
 /*////////////////// Searchbar on Screen 0 - 1024px /////////////////*/
 
 .search-bar {
-    position: relative;
-    margin-left: 33px;
-    width: 251px;
-    height: 41px;
+  position: relative;
+  margin-left: 33px;
+  width: 251px;
+  height: 41px;
 }
 
 .search-input {
-    width: 245px;
-    height: 37px;
-    border: 1px solid #A8A8A8;
-    border-radius: 10px;
-    text-indent: 20px;
+  width: 245px;
+  height: 37px;
+  border: 1px solid #a8a8a8;
+  border-radius: 10px;
+  text-indent: 20px;
 }
 
 .search-icon {
-    position: absolute;
-    left: 219px;
-    transform: translateY(50%);
+  position: absolute;
+  left: 219px;
+  transform: translateY(50%);
 }
 
 .search-bar-line {
-    position: absolute;
-    left: 204px;
-    margin-top: 6px;
+  position: absolute;
+  left: 204px;
+  margin-top: 6px;
 }
 
 .search-input::placeholder {
-    font-family: 'Inter';
-    font-weight: 400;
-    font-size: 16px;
-    color: #D1D1D1;
+  font-family: "Inter";
+  font-weight: 400;
+  font-size: 16px;
+  color: #d1d1d1;
 }
 
 /*////////////////// Searchbar on Screen 1024px /////////////////*/
 
 .secondSearch-bar {
-    display: flex;
-    position: relative;
-    margin-right: 45px;
-    width: 251px;
-    height: 51px;
+  display: flex;
+  position: relative;
+  margin-right: 45px;
+  width: 251px;
+  height: 51px;
 }
 
 /*////////////////// main content Cards /////////////////*/
 
 .task-content {
-    height: auto;
-    margin-left: 33px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    margin-right: 29px;
-    flex-wrap: wrap;
-    gap: 26px;
+  height: auto;
+  margin-left: 33px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-right: 29px;
+  flex-wrap: wrap;
+  gap: 26px;
 }
 
 .task-list {
-    margin-top: 22px;
-    display: flex;
-    flex-direction: column;
-    max-width: 100%;
+  margin-top: 22px;
+  display: flex;
+  flex-direction: column;
+  max-width: 100%;
 }
 
 .list {
-    height: calc(100% - 90px);
+  height: calc(100% - 90px);
 }
 
 .card-head {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    font-weight: 700;
-    font-size: 21px;
-    height: 25px;
-    padding: 2px 0;
-    margin-bottom: 22px;
-    max-width: 363px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-weight: 700;
+  font-size: 21px;
+  height: 25px;
+  padding: 2px 0;
+  margin-bottom: 22px;
+  max-width: 363px;
 }
 
 .card-head img {
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
 }
 
 .task-card {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 10px;
-    max-width: 363px;
-    height: auto;
-    padding: 18px 0;
-    background: #FFFFFF;
-    box-shadow: 0px 0px 14px 3px rgba(0, 0, 0, 0.04);
-    border-radius: 30px;
-    margin-bottom: 22px;
-    cursor: pointer;
-    overflow: auto;
-    position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 10px;
+  max-width: 363px;
+  height: auto;
+  padding: 18px 0;
+  background: #ffffff;
+  box-shadow: 0px 0px 14px 3px rgba(0, 0, 0, 0.04);
+  border-radius: 30px;
+  margin-bottom: 22px;
+  cursor: pointer;
+  overflow: auto;
+  position: relative;
 }
 
 .highlight {
-    background-color: #e5e5e596;
+  background-color: #e5e5e596;
 }
-
 
 .task-category,
 .task-title,
 .task-description,
 .task-progress,
 .task-assignedTo {
-    margin-left: 21px;
+  margin-left: 21px;
 }
 
 .task-category {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 4px 25px;
-    border-radius: 8px;
-    font-weight: 400;
-    font-size: 16px;
-    color: #FFFFFF;
-    width: fit-content;
-    height: 19px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 4px 25px;
+  border-radius: 8px;
+  font-weight: 400;
+  font-size: 16px;
+  color: #ffffff;
+  width: fit-content;
+  height: 19px;
 }
 
 .task-title {
-    font-weight: 700;
-    font-size: 16px;
-    color: #2A3647;
+  font-weight: 700;
+  font-size: 16px;
+  color: #2a3647;
 }
 
 .task-description {
-    font-weight: 400;
-    font-size: 16px;
-    color: #A8A8A8;
-    padding-right: 21px;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  font-weight: 400;
+  font-size: 16px;
+  color: #a8a8a8;
+  padding-right: 21px;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
-
 .task-progress {
-    width: 87%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+  width: 87%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .progress-steps {
-    font-weight: 400;
-    font-size: 12px;
-    margin-left: 20px;
+  font-weight: 400;
+  font-size: 12px;
+  margin-left: 20px;
 }
 
 .progress {
-    --bs-progress-height: 8px !important;
-    width: 251px;
+  --bs-progress-height: 8px !important;
+  width: 251px;
 }
 
 .task-assignedTo {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .task-icons {
-    display: flex;
+  display: flex;
 }
 
 .task-assignedTo img {
-    margin-right: 28px;
+  margin-right: 28px;
 }
 
 .task-assignedTo span {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 17px;
-    height: 13px;
-    padding: 10px 8px;
-    border: 1px solid #FFFFFF;
-    border-radius: 58px;
-    font-weight: 400;
-    font-size: 12px;
-    color: #FFFFFF;
-    margin-right: -6px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 17px;
+  height: 13px;
+  padding: 10px 8px;
+  border: 1px solid #ffffff;
+  border-radius: 58px;
+  font-weight: 400;
+  font-size: 12px;
+  color: #ffffff;
+  margin-right: -6px;
 }
 
 .empty-card {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 39px;
-    background: #D1D1D1;
-    border: 1px dashed #A8A8A8;
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-    font-family: 'Inter';
-    font-weight: 400;
-    font-size: 16px;
-    color: #A8A8A8;
-    min-width: 250px;
-    max-width: 363px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 39px;
+  background: #d1d1d1;
+  border: 1px dashed #a8a8a8;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  font-family: "Inter";
+  font-weight: 400;
+  font-size: 16px;
+  color: #a8a8a8;
+  min-width: 250px;
+  max-width: 363px;
 }
 
-
-
 .drag-area-highlight {
-    background-color: #e0e0e06d;
-    border-radius: 30px;
+  background-color: #e0e0e06d;
+  border-radius: 30px;
 }
 
 .menu-points {
-    width: 35px;
-    margin-right: 20px;
+  width: 35px;
+  margin-right: 20px;
 }
 
 .menu-container {
-    display: flex;
-    margin-top: -15px;
-    width: 100%;
-    justify-content: end;
-    min-width: 250px;
+  display: flex;
+  margin-top: -15px;
+  width: 100%;
+  justify-content: end;
+  min-width: 250px;
 }
 
 .arrow-up {
-    top: 158px
+  top: 158px;
 }
 
 .arrow-down {
-    bottom: 0;
+  bottom: 0;
 }
 
 .remaining-contacts {
-    background: blue;
+  background: blue;
 }
 
 /*----add-tast-popUp---------*/
 .popup-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    /* Abdunkelung des Hintergrunds */
-    z-index: 9999;
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.3s ease, visibility 0s linear 0.3s;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  /* Abdunkelung des Hintergrunds */
+  z-index: 9999;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, visibility 0s linear 0.3s;
 }
 
 .popup-content {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    border-radius: 30px;
-    transform: translate(-50%, -50%);
-    width: 1116px;
-    height: 914px;
-    background-color: #ffffff;
-    z-index: 10000;
-    transition: opacity 0.3s ease;
-    display: flex;
-    justify-content: center;
-    overflow-y: auto;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  border-radius: 30px;
+  transform: translate(-50%, -50%);
+  width: 1116px;
+  height: 950px;
+  background-color: #ffffff;
+  z-index: 10000;
+  transition: opacity 0.3s ease;
+  display: flex;
+  justify-content: center;
+  overflow-y: auto;
 }
 
 .popup-overlay.active {
-    opacity: 1;
-    visibility: visible;
-    transition-delay: 0s;
+  opacity: 1;
+  visibility: visible;
+  transition-delay: 0s;
 }
 
 .popup-content.active {
-    opacity: 1;
+  opacity: 1;
 }
 
 .popup-content::-webkit-scrollbar {
-    width: 12px;
-    background-color: #F5F5F5;
-    /* Hintergrund des Scrollbars */
+  width: 12px;
+  background-color: #f5f5f5;
+  /* Hintergrund des Scrollbars */
 }
 
 .popup-content::-webkit-scrollbar-thumb {
-    background-color: #888;
-    /* Farbe des Scroll-Handles */
-    border-radius: 10px;
-    border: 3px solid #F5F5F5;
-    /* Farbe des Scrollbar-Hintergrunds */
+  background-color: #888;
+  /* Farbe des Scroll-Handles */
+  border-radius: 10px;
+  border: 3px solid #f5f5f5;
+  /* Farbe des Scrollbar-Hintergrunds */
 }
 
 .popup-content::-webkit-scrollbar-thumb:hover {
-    background: #555;
-    /* Farbe des Scroll-Handles beim Überfahren mit der Maus */
+  background: #555;
+  /* Farbe des Scroll-Handles beim Überfahren mit der Maus */
 }
 
 .popup-content::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
 }
 
 .popup-content.scrolling {
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
 }
 
 .dis-none {
-    display: none;
+  display: none;
 }
 
 .card-change-status {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 5px;
-    min-width: 250px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+  min-width: 250px;
 }
 
 .card-change-status span,
 .card-change-status div {
-    background-color: rgba(211, 211, 211, 0.466);
-    border-radius: 5px;
-    width: 120px;
-    text-align: center;
+  background-color: rgba(211, 211, 211, 0.466);
+  border-radius: 5px;
+  width: 120px;
+  text-align: center;
 }
 
 .card-change-status span:hover,
 .card-change-status div:hover {
-    font-weight: 800;
+  font-weight: 800;
 }
 
 .close-task {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 /*---------------*/
 
 @media (max-width: 900px) {
-    .popup-overlay.active {
-        background-color: transparent;
-    }
+  .popup-overlay.active {
+    background-color: transparent;
+  }
 
-    .popup-content {
-        background-color: #F5F5F5;
-        overflow-y: unset;
-    }
+  .popup-content {
+    background-color: #f5f5f5;
+    overflow-y: unset;
+  }
 }
 
 @media (min-width: 321px) {
-    .popup-overlay {
-        background-color: rgba(0, 0, 0, 0.5);
-    }
+  .popup-overlay {
+    background-color: rgba(0, 0, 0, 0.5);
+  }
 }
 
 /*------------------*/
 
 @media (max-width: 900px) and (min-width: 280px) {
+  .popup-content {
+    position: fixed;
+    top: 80px;
+    /* Höhe des Headers */
+    left: 0;
+    width: 100%;
+    height: calc(100% - 80px);
+    /* Höhe des Fensters minus die Höhe des Headers */
+    transform: none;
+    /* Keine Verschiebung */
+    z-index: 98;
+    border-radius: 0;
+    align-items: flex-start;
+    overflow-y: auto;
+  }
 
-    .popup-content {
-        position: fixed;
-        top: 80px;
-        /* Höhe des Headers */
-        left: 0;
-        width: 100%;
-        height: calc(100% - 80px);
-        /* Höhe des Fensters minus die Höhe des Headers */
-        transform: none;
-        /* Keine Verschiebung */
-        z-index: 98;
-        border-radius: 0;
-        align-items: flex-start;
-        overflow-y: auto;
-    }
+  .popup-overlay.active {
+    top: 80px;
+  }
 
-    .popup-overlay.active {
-        top: 80px;
-    }
+  #burger-menu {
+    z-index: 9999999;
+  }
 
-    #burger-menu {
-        z-index: 9999999;
-    }
-
-    footer {
-        z-index: 0 !important;
-    }
-
+  footer {
+    z-index: 0 !important;
+  }
 }
-
 
 /*----------------*/
 
-
-@media(min-width:768px) {
-    .popup-content {
-        width: 100%;
-    }
+@media (min-width: 768px) {
+  .popup-content {
+    width: 100%;
+  }
 }
 
 @media (min-width: 813px) {
-    .task-card {
-        max-width: 250px;
-        max-height: 205px;
-    }
+  .task-card {
+    max-width: 250px;
+    max-height: 205px;
+  }
 
-    .card-with-PBar {
-        max-width: 250px;
-        max-height: 239px;
-    }
+  .card-with-PBar {
+    max-width: 250px;
+    max-height: 239px;
+  }
 
-    .head-title {
-        margin-left: 9px;
-    }
+  .head-title {
+    margin-left: 9px;
+  }
 }
 
 @media (min-width: 1024px) {
-    .task-content {
-        margin-left: 282px;
-        margin-top: 50px;
-    }
+  .task-content {
+    margin-left: 282px;
+    margin-top: 50px;
+  }
 
-    .title-section {
-        margin-left: 275px;
-        margin-right: 52px;
-    }
+  .title-section {
+    margin-left: 275px;
+    margin-right: 52px;
+  }
 
-    .head-span {
-        display: none;
-    }
+  .head-span {
+    display: none;
+  }
 
-    .search-bar {
-        display: none;
-    }
+  .search-bar {
+    display: none;
+  }
 
-    .edit-btn {
-        display: none;
-    }
+  .edit-btn {
+    display: none;
+  }
 
-    .button-add-div {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 137px;
-        height: 55px;
-        padding: 0 10px;
-        background-color: #2A3647;
-        border-radius: 10px;
-        color: white;
-        font-family: Arial, sans-serif;
-        font-size: 21px;
-        font-weight: bold;
-        cursor: pointer;
-        transition: 125ms ease-in-out;
-    }
+  .button-add-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 137px;
+    height: 55px;
+    padding: 0 10px;
+    background-color: #2a3647;
+    border-radius: 10px;
+    color: white;
+    font-family: Arial, sans-serif;
+    font-size: 21px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: 125ms ease-in-out;
+  }
 
-    .button-add-div:hover {
-        background-color: #29ABE2;
-    }
+  .button-add-div:hover {
+    background-color: #29abe2;
+  }
 
-    .button-add-div img {
-        margin-left: 10px;
-    }
+  .button-add-div img {
+    margin-left: 10px;
+  }
 
+  .responsive-searchbar {
+    display: flex;
+  }
 
-    .responsive-searchbar {
-        display: flex;
-    }
+  .secondSearch-bar-line {
+    position: absolute;
+    left: 204px;
+    margin-top: 6px;
+  }
 
-    .secondSearch-bar-line {
-        position: absolute;
-        left: 204px;
-        margin-top: 6px;
-    }
+  .search-input {
+    height: 51px;
+  }
 
-    .search-input {
-        height: 51px;
-    }
+  .search-bar-line {
+    height: 38px;
+    margin-top: 9px;
+  }
 
-    .search-bar-line {
-        height: 38px;
-        margin-top: 9px;
-    }
+  .search-icon {
+    transform: translateY(86%);
+  }
 
-    .search-icon {
-        transform: translateY(86%);
-    }
+  .main-div {
+    padding-top: 165px;
+  }
 
-    .main-div {
-        padding-top: 165px;
-    }
-
-    .popup-content {
-        width: 920px;
-    }
+  .popup-content {
+    width: 920px;
+  }
 }
 
 @media (min-width: 1200px) {
-    .popup-content {
-        width: 1116px
-    }
+  .popup-content {
+    width: 1116px;
+  }
 }
 
 @media (min-width: 1650px) {
-    .task-card {
-        max-width: 370px;
-        height: auto;
-    }
+  .task-card {
+    max-width: 370px;
+    height: auto;
+  }
 }
