--- a/asssets/css/help.css
+++ b/asssets/css/help.css
@@ -71,7 +71,7 @@ border: none;
   margin-top: 30px;
   margin: 32px;
   margin-bottom: 100px;
-  padding-left: 232px;
+  
 }
 
 
@@ -81,4 +81,10 @@ border: none;
 
 .mg-35 {
   margin-right: 35px;
+}
+
+@media(min-width:1024px) {
+  .wrapper {
+    padding-left: 232px;
+  }
 }
