--- a/asssets/css/contact_media.css
+++ b/asssets/css/contact_media.css
@@ -79,11 +79,15 @@
     }
 }
 
-@media(max-width: 768px){
+@media(max-width: 769px){
     .content-big-contact {
         bottom: 0;
         left: 0;
         z-index: -9;
+    }
+
+    .new-contact-frame{
+        width: 100%;
     }
 }
 
@@ -91,7 +95,7 @@
 
 
 
-@media(min-width: 768px){
+@media(min-width: 769px){
 
     .letter-frame {
         width: 100%;
@@ -330,6 +334,7 @@
 
     .slide-in {
         transform: translateX(0) !important;
+        z-index: 9;
       }
 
       .close-x-dark-container{
