--- a/asssets/css/board.css
+++ b/asssets/css/board.css
@@ -68,7 +68,7 @@ body {
 
 .main-div {
   background-color: #f5f5f5;
-  height: calc(100vh - 165px);
+  height: calc(100vh - 80px);
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -520,6 +520,11 @@ body {
   .task-content {
     margin-left: 282px;
     margin-top: 50px;
+  }
+  .main-div {
+    
+    height: calc(100vh - 165px);
+    
   }
 
   .title-section {
